fix: address PR #17 review comments
- Security: use Cert= value as XFCC cache key instead of Hash=.
  Hash= can be injected by external clients when header stripping is
  not enabled, allowing identity substitution without presenting a
  certificate. Keying by Cert= ensures only a request carrying the
  full certificate bytes can produce a cache hit.

- Bug: replace Collections.emptyEnumeration() (Java 9+) with
  Collections.enumeration(emptyList()) for Java 8 compatibility.

- Bug: add explicit StandardCharsets.UTF_8 to getBytes() call in
  decodeHeader() — platform default charset could corrupt PEM on
  non-UTF-8 JVMs.

- Bug: override getDateHeader() and getIntHeader() in
  XfccStrippingRequestWrapper — HttpServletRequestWrapper delegates
  these directly to the wrapped request, bypassing getHeader().

- Bug: guard against null return from super.getHeaderNames() in
  XfccStrippingRequestWrapper — Servlet spec permits null.

- Cleanup: replace FQN java.util.logging.Level with import.

- Tests: add xfccCacheNoCertFieldSkipsCacheLookup,
  stripDateAndIntHeaderHideXfcc, stripGetHeaderNamesNullSafe.

- Update README cache key rationale.

- Regenerate javax variant from jakarta via sed.